--- a/frostedglass.html
+++ b/frostedglass.html
@@ -27,6 +27,12 @@
         src: local("Noto Color Emoji");
       }
 
+      @font-face {
+        font-family: "San Francisco";
+        font-weight: 400;
+        src: url("./assets/fonts/sanfranciscodisplay-regular-webfont.woff") format("woff");
+      }
+
       @keyframes distort1 {
         0% {
           transform: translate(-10%, -8%) scale(1.05);
@@ -70,16 +76,16 @@
       }
 
       body {
-        font-family: "Poppins", sans-serif;
+        font-family: "San Francisco", sans-serif;
         -webkit-font-smoothing: antialiased;
         width: 100vw;
         height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
-        /* background: url("https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=3840&q=80")
-          center/cover no-repeat; */
-        background: transparent;
+        background: url("https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=3840&q=80")
+          center/cover no-repeat;
+        /* background: transparent; */
         backdrop-filter: none;
         overflow: hidden;
       }
@@ -102,17 +108,17 @@
       }
 
       .style-glass .message-wrapper {
-        backdrop-filter: blur(65px) brightness(1.1) saturate(1.3);
-        -webkit-backdrop-filter: blur(65px) brightness(1.1) saturate(1.3);
-        border-radius: 22px;
+        /* backdrop-filter: blur(2px) brightness(1.1) saturate(1.3); */
+        /* -webkit-backdrop-filter: blur(2px) brightness(1.1) saturate(1.3); */
+        border-radius: 70px;
         border: 1px solid rgba(255, 255, 255, 0.18);
       }
 
       .style-glass .message-wrapper.show {
-        filter: blur(0);
         opacity: 1;
         transform: translateY(0px);
-        margin: 0 20%;
+        margin: 0 2%;
+        background: rgb(255, 255, 255, 0.8);
       }
 
       .style-glass .message-wrapper.hide {
@@ -198,13 +204,17 @@
       }
 
       .style-glass .username {
-        color: #fff;
-        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+        color: #fd1ec1;
+        /* text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); */
+        font-weight: bolder;
+        font-size: x-large;
       }
 
       .style-glass .text {
-        color: #f0f0f0;
-        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+        color: #000;
+        /* text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2); */
+        font-size: xx-large;
+        font-weight: bold;
       }
 
       .donation-info {
@@ -219,9 +229,9 @@
       }
 
       .style-glass .donation-info {
-        background: rgba(255, 215, 0, 0.2);
-        color: #ffd700;
-        border: 1px solid rgba(255, 215, 0, 0.4);
+        background: #244e1c;
+        color: #fff;
+        border: 1px solid #244e1c;
       }
 
       .badges:empty,
