--- a/imessage.html
+++ b/imessage.html
@@ -309,6 +309,7 @@
         urlParams.get("room") ||
         urlParams.get("roomid") ||
         "TESTROOM";
+      // const style = urlParams.get("style") || "glass";
       const password =
         urlParams.get("password") ||
         urlParams.get("pass") ||
@@ -318,7 +319,7 @@
         urlParams.get("showtime") || urlParams.get("timer") || "30000"
       );
       const pseudodock = urlParams.has("autoshow");
-      document.body.className = `style-${style}`;
+      document.body.className = `style-glass`;
 
       let messageTimeout = null;
       let currentMessage = null;
@@ -350,6 +351,7 @@
         iframe.style.left = "-100px";
         iframe.style.top = "-100px";
         iframe.id = "frame1";
+        // iframe.allow = "midi;geolocation;microphone;"; // microphone is needed for Safari webRTC P2P connections
         document.body.appendChild(iframe);
 
         var eventMethod = window.addEventListener
