--- a/vertical.html
+++ b/vertical.html
@@ -92,7 +92,7 @@
         display: flex;
         flex-direction: column;
         align-items: stretch;
-        background: #353535;
+        /* background: #353535; */
         position: absolute;
         left: 50%;
         bottom: 0;
@@ -101,7 +101,7 @@
         max-width: 350px;
         /* padding: 0 20px; */
         box-sizing: border-box;
-        border-radius: 2%;
+        /* border-radius: 2%; */
         margin-bottom: 1%;
       }
 
@@ -112,16 +112,21 @@
       }
 
       .avatar {
-        width: auto;
+        width: 100%;
         height: auto;
         border-radius: 2%;
         object-fit: cover;
         flex-shrink: 0;
         /* margin-left: 2%; */
         /* border: 2px solid #000; */
-        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-        margin:2%;
+        /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+        /* margin:2%; */
         background: whitesmoke;
+        border: 7px solid #353535;
+        border-radius: 30px;
+        z-index: 99;
+        position: absolute;
+        bottom: 89%;
       }
 
       .message {
@@ -132,13 +137,30 @@
         padding: 0;
         /* z-index: 99; */
         /* backdrop-filter: blur(2px); */
-        /* margin: 3%; */
-        /* background: #353535; */
-        /* border-radius: 30px 30px 0 0; */
+        /* margin: 0% 0%; */
+        background: #353535;
+        /* border-radius: 0 0 30px 30px; */
         position: relative;
         overflow: hidden;
-        padding: 28px 28px;
-        margin-top: 3%;
+        padding: 50px 28px 28px 28px;
+        margin-top: -3%;
+      }
+
+      .footer {
+        display: inline-flex;
+        align-items: center;
+        gap: 10px;
+        position: relative;
+        padding: 0;
+        /* z-index: 99; */
+        /* backdrop-filter: blur(2px); */
+        /* margin: 3%; */
+        background: darkslategray;
+        border-radius: 0 0 30px 30px;
+        position: relative;
+        overflow: hidden;
+        padding: 2% 5%;
+        /* margin-top: -1%; */
       }
 
       .username {
@@ -210,8 +232,8 @@
       }
 
       .source-icon {
-        width: 20px;
-        height: 20px;
+        width: 35px;
+        height: auto;
         opacity: 0.8;
       }
 
@@ -245,9 +267,6 @@
         display: flex;
         gap: 4px;
         align-items: center;
-      }
-
-      .badge {
         height: 18px;
       }
 
@@ -260,9 +279,6 @@
         font-size: 14px;
         font-weight: 600;
         margin-top: 8px;
-      }
-
-      .donation-info {
         background: #244e1c;
         color: #fff;
         border: 1px solid #244e1c;
@@ -486,50 +502,7 @@
           const contentDiv = document.createElement("div");
           contentDiv.className = "message-content";
 
-          const header = document.createElement("div");
-          header.className = "username";
-
-          if (content.chatname) {
-            const name = document.createElement("span");
-            name.innerHTML = content.chatname;
-            // if (content.nameColor) {
-            //   name.style.color = content.nameColor;
-            // }
-            header.appendChild(name);
-          }
-
-          // Source icon
-          if (content.type) {
-            const sourceIcon = document.createElement("img");
-            sourceIcon.className = "source-icon";
-            sourceIcon.src = `./assets/images/${content.type}.png`;
-            sourceIcon.onerror = () => {
-              sourceIcon.style.display = "none";
-            };
-            header.appendChild(sourceIcon);
-          }
-
-          // Badges
-          if (content.chatbadges && Array.isArray(content.chatbadges)) {
-            const badges = document.createElement("div");
-            badges.className = "badges";
-            content.chatbadges.forEach((badge) => {
-              if (typeof badge === "string") {
-                const img = document.createElement("img");
-                img.className = "badge";
-                img.src = badge;
-                badges.appendChild(img);
-              } else if (badge.src) {
-                const img = document.createElement("img");
-                img.className = "badge";
-                img.src = badge.src;
-                badges.appendChild(img);
-              }
-            });
-            header.appendChild(badges);
-          }
-
-          message.appendChild(header);
+          // message.appendChild(header);
 
           // Message text
           if (content.chatmessage) {
@@ -546,7 +519,6 @@
           if (content.hasDonation || content.membership) {
             const donationDiv = document.createElement("div");
             donationDiv.className = "donation-info";
-
             if (content.hasDonation) {
               donationDiv.textContent = content.title
                 ? `${content.title}: ${content.hasDonation}`
@@ -571,6 +543,58 @@
 
           message.appendChild(contentDiv);
           wrapper.appendChild(message);
+
+          // footer
+          const footerDiv = document.createElement("div");
+          footerDiv.className = "footer";
+
+          // Source icon
+          if (content.type) {
+            const sourceIcon = document.createElement("img");
+            sourceIcon.className = "source-icon";
+            sourceIcon.src = `./assets/images/${content.type}.png`;
+            sourceIcon.onerror = () => {
+              sourceIcon.style.display = "none";
+            };
+            footerDiv.appendChild(sourceIcon);
+          }
+
+          // username and badges
+          const header = document.createElement("div");
+          header.className = "username";
+
+          if (content.chatname) {
+            const name = document.createElement("span");
+            name.innerHTML = content.chatname;
+            // if (content.nameColor) {
+            //   name.style.color = content.nameColor;
+            // }
+            header.appendChild(name);
+          }
+
+          // Badges
+          if (content.chatbadges && Array.isArray(content.chatbadges)) {
+            const badges = document.createElement("div");
+            badges.className = "badges";
+            content.chatbadges.forEach((badge) => {
+              if (typeof badge === "string") {
+                const img = document.createElement("img");
+                img.className = "badge";
+                img.src = badge;
+                badges.appendChild(img);
+              } else if (badge.src) {
+                const img = document.createElement("img");
+                img.className = "badge";
+                img.src = badge.src;
+                badges.appendChild(img);
+              }
+            });
+            header.appendChild(badges);
+          }
+
+          footerDiv.appendChild(header);
+
+          wrapper.appendChild(footerDiv);
 
           const output = document.getElementById("output");
           output.innerHTML = "";
