--- a/vertical.html
+++ b/vertical.html
@@ -155,7 +155,7 @@
         /* z-index: 99; */
         /* backdrop-filter: blur(2px); */
         /* margin: 3%; */
-        background: darkslategray;
+        background: goldenrod;
         border-radius: 0 0 30px 30px;
         position: relative;
         overflow: hidden;
