update all badge css width and height

--- a/simple.html
+++ b/simple.html
@@ -173,7 +173,8 @@
       }
 
       .badge {
-        height: 18px;
+        height: auto;
+        width: 20px;
       }
 
       .style-glass .message {
