--- a/vertical.html
+++ b/vertical.html
@@ -270,6 +270,11 @@
         height: 18px;
       }
 
+      .badge {
+        height: auto;
+        width: 20px;
+      }
+
       .donation-info {
         display: inline-flex;
         align-items: center;
