--- a/simplegradient.html
+++ b/simplegradient.html
@@ -174,7 +174,8 @@
       }
 
       .badge {
-        height: 18px;
+        height: auto;
+        width: 20px;
       }
 
       .style-glass .message {
