--- a/vertical.html
+++ b/vertical.html
@@ -271,8 +271,8 @@
       }
 
       .badge {
-        height: auto;
-        width: 20px;
+        height: 20px !important;
+        width: 20px !important;
       }
 
       .donation-info {
