--- a/vertical.html
+++ b/vertical.html
@@ -143,7 +143,7 @@
         position: relative;
         overflow: hidden;
         padding: 50px 28px 28px 28px;
-        margin-top: -3%;
+        margin-top: -4%;
       }
 
       .footer {
@@ -156,7 +156,7 @@
         /* backdrop-filter: blur(2px); */
         /* margin: 3%; */
         background: goldenrod;
-        border-radius: 0 0 30px 30px;
+        border-radius: 0 0 25px 25px;
         position: relative;
         overflow: hidden;
         padding: 2% 5%;
@@ -165,7 +165,7 @@
 
       .username {
         /* font-weight: 500; */
-        font-size: 20px;
+        font-size: clamp(1.2rem, 1.2rem, 1.3rem);
         display: flex;
         align-items: center;
         gap: 8px;
@@ -175,7 +175,7 @@
         /* border: 1px solid #181818; */
         /* border-radius: 60px; */
         /* background: #fff; */
-        color: white;
+        color: black;
         /* padding: 2%; */
         /* position: absolute; */
         /* top: 2%; */
@@ -232,9 +232,9 @@
       }
 
       .source-icon {
-        width: 35px;
+        width: 25px;
         height: auto;
-        opacity: 0.8;
+        opacity: 0.7;
       }
 
       .text {
@@ -268,6 +268,9 @@
         gap: 4px;
         align-items: center;
         height: 18px;
+        position: absolute;
+        z-index: 99;
+        top: 0;
       }
 
       .badge {
@@ -284,6 +287,7 @@
         font-size: 14px;
         font-weight: 600;
         margin-top: 8px;
+        margin-bottom: 8px;
         background: #244e1c;
         color: #fff;
         border: 1px solid #244e1c;
@@ -509,16 +513,7 @@
 
           // message.appendChild(header);
 
-          // Message text
-          if (content.chatmessage) {
-            const text = document.createElement("div");
-            text.className = "text";
-            text.innerHTML = content.chatmessage;
-            if (content.textColor) {
-              text.style.color = content.textColor;
-            }
-            contentDiv.appendChild(text);
-          }
+          
 
           // Donation/Membership info
           if (content.hasDonation || content.membership) {
@@ -545,9 +540,6 @@
             img.src = content.contentimg;
             contentDiv.appendChild(img);
           }
-
-          message.appendChild(contentDiv);
-          wrapper.appendChild(message);
 
           // footer
           const footerDiv = document.createElement("div");
@@ -594,9 +586,22 @@
                 badges.appendChild(img);
               }
             });
-            header.appendChild(badges);
+            contentDiv.appendChild(badges);
           }
 
+          // Message text
+          if (content.chatmessage) {
+            const text = document.createElement("div");
+            text.className = "text";
+            text.innerHTML = content.chatmessage;
+            if (content.textColor) {
+              text.style.color = content.textColor;
+            }
+            contentDiv.appendChild(text);
+          }
+
+          message.appendChild(contentDiv);
+          wrapper.appendChild(message);
           footerDiv.appendChild(header);
 
           wrapper.appendChild(footerDiv);
