--- a/simpleanalog.html
+++ b/simpleanalog.html
@@ -1,197 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Featured Message - Modern Styles</title>
-    <link rel="icon" href="./assets/icons/favicon.ico" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap"
-      rel="stylesheet"
-    />
+<head>
+<meta charset="UTF-8">
+<title>Fixed Analog Clock</title>
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
+<style>
+  body {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
+    font-family: Arial, sans-serif;
+  }
 
-    <style>
-      :root {
-        --apple-heading: 600;
-        --apple-body: 400;
-      }
+  .clock {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    border: 8px solid #63a9ff;
+    border-radius: 50%;
+    background: transparent;
+  }
 
-      @font-face {
-        font-family: NotoColorEmojiLimited;
-        unicode-range: U+1F1E6-1F1FF;
-        src: local("Noto Color Emoji");
-      }
+  /* Numbers */
+  .number {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    transform: rotate(calc(30deg * var(--n)));
+  }
 
-      @font-face {
-        font-family: "San Francisco";
-        font-weight: 400;
-        src: url("./assets/fonts/sanfranciscodisplay-regular-webfont.woff")
-          format("woff");
-      }
+  .number span {
+    display: block;
+    transform: rotate(calc(-30deg * var(--n)));
+    margin-top: 12px;
+  }
 
-      @keyframes spin {
-        from {
-          transform: rotate(0deg);
-        }
-        to {
-          transform: rotate(360deg);
-        }
-      }
+  /* Hands */
+  .hand {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform-origin: 50% 100%;
+    transform: translate(-50%, -100%) rotate(0deg);
+    background: #555;
+    border-radius: 4px;
+  }
 
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-style: normal;
-      }
+  .hour {
+    width: 6px;
+    height: 70px;
+  }
 
-      body {
-        font-family: "San Francisco", sans-serif;
-        -webkit-font-smoothing: antialiased;
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        /* background: url("https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=3840&q=80") center/cover no-repeat; */
-        background: transparent;
-        backdrop-filter: none;
-        overflow: hidden;
-      }
+  .minute {
+    width: 4px;
+    height: 100px;
+  }
 
-      .content {
-        font-weight: var(--apple-heading);
-        font-size: 21px;
-        letter-spacing: -0.015em;
-      }
+  .second {
+    width: 2px;
+    height: 120px;
+    background: red;
+  }
 
-      .info {
-        font-weight: var(--apple-body);
-        font-size: 17px;
-        letter-spacing: -0.01em;
-        line-height: 1.4;
-      }
+  .center {
+    position: absolute;
+    width: 12px;
+    height: 12px;
+    background: black;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+</style>
+</head>
 
-      #container {
-        width: 100%;
-      }
+<body>
 
-      /* .output {
-        backdrop-filter: blur(2px) brightness(1.1) saturate(1.3);
-        -webkit-backdrop-filter: blur(2px) brightness(1.1) saturate(1.3);
-        border-radius: 70px;
-        border: 1px solid rgba(255, 255, 255, 0.18);
-        min-height: 100px;
-        background-color: black;
-        color: white;
-      } */
+<div class="clock">
+  <!-- Numbers -->
+  <div class="number" style="--n:1"><span>1</span></div>
+  <div class="number" style="--n:2"><span>2</span></div>
+  <div class="number" style="--n:3"><span>3</span></div>
+  <div class="number" style="--n:4"><span>4</span></div>
+  <div class="number" style="--n:5"><span>5</span></div>
+  <div class="number" style="--n:6"><span>6</span></div>
+  <div class="number" style="--n:7"><span>7</span></div>
+  <div class="number" style="--n:8"><span>8</span></div>
+  <div class="number" style="--n:9"><span>9</span></div>
+  <div class="number" style="--n:10"><span>10</span></div>
+  <div class="number" style="--n:11"><span>11</span></div>
+  <div class="number" style="--n:12"><span>12</span></div>
 
-      .analog-clock {
-        width: 200px;
-        height: 200px;
-        border: 8px solid #38bdf8;
-        border-radius: 50%;
-        position: relative;
-        background: #020617;
-      }
+  <!-- Hands -->
+  <div class="hand hour" id="hour"></div>
+  <div class="hand minute" id="minute"></div>
+  <div class="hand second" id="second"></div>
 
-      .hand {
-        position: absolute;
-        width: 50%;
-        height: 2px;
-        background: white;
-        top: 50%;
-        transform-origin: 100%;
-        transform: rotate(90deg);
-      }
+  <div class="center"></div>
+</div>
 
-      .hour {
-        height: 4px;
-        /* width: 35%; */
-      }
+<script>
+  function updateClock() {
+    const now = new Date();
 
-      .minute {
-        height: 3px;
-      }
+    const sec = now.getSeconds();
+    const min = now.getMinutes();
+    const hr = now.getHours() % 12;
 
-      .second {
-        background: red;
-      }
+    document.getElementById("second").style.transform =
+      `translate(-50%, -100%) rotate(${sec * 6}deg)`;
 
-      .center {
-        width: 10px;
-        height: 10px;
-        background: white;
-        border-radius: 50%;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
+    document.getElementById("minute").style.transform =
+      `translate(-50%, -100%) rotate(${min * 6 + sec * 0.1}deg)`;
 
-      @media (max-width: 600px) {
-        .message {
-          padding: 16px;
-        }
+    document.getElementById("hour").style.transform =
+      `translate(-50%, -100%) rotate(${hr * 30 + min * 0.5}deg)`;
+  }
 
-        .avatar {
-          width: 48px;
-          height: 48px;
-        }
+  setInterval(updateClock, 1000);
+  updateClock();
+</script>
 
-        .username {
-          font-size: 16px;
-        }
-
-        .text {
-          font-size: 18px;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="container">
-      <div class="output">
-        <div class="analog-clock">
-          <div class="hand hour" id="hour"></div>
-          <div class="hand minute" id="minute"></div>
-          <div class="hand second" id="second"></div>
-          <div class="center"></div>
-        </div>
-      </div>
-    </div>
-
-    <script src="./assets/js/tts.js"></script>
-    <script>
-      function setClock() {
-        const now = new Date();
-
-        const seconds = now.getSeconds();
-        const minutes = now.getMinutes();
-        const hours = now.getHours();
-
-        const secondDeg = (seconds / 60) * 360;
-        const minuteDeg = (minutes / 60) * 360;
-        const hourDeg = (hours / 12) * 360 + (minutes / 60) * 30;
-
-        document.getElementById(
-          "second"
-        ).style.transform = `rotate(${secondDeg}deg)`;
-        document.getElementById(
-          "minute"
-        ).style.transform = `rotate(${minuteDeg}deg)`;
-        document.getElementById(
-          "hour"
-        ).style.transform = `rotate(${hourDeg}deg)`;
-      }
-
-      setInterval(setClock, 1000);
-      setClock();
-    </script>
-  </body>
+</body>
 </html>
