--- a/vertical.html
+++ b/vertical.html
@@ -126,7 +126,7 @@
         border-radius: 30px;
         z-index: 99;
         position: absolute;
-        bottom: 89%;
+        bottom: 91%;
       }
 
       .message {
@@ -184,11 +184,12 @@
         /* box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 10px; */
         /* align-items: center; */
         overflow-wrap: anywhere;
+        /* text-shadow: 0 5px 4px rgba(0, 0, 0, 0.3); */
       }
 
       .text {
         color: #fff !important;
-        text-shadow: 0 5px 4px rgba(0, 0, 0, 0.3);
+        /* text-shadow: 0 5px 4px rgba(0, 0, 0, 0.3); */
         font-size: x-large;
         font-weight: 500;
       }
@@ -239,7 +240,7 @@
       }
 
       .text {
-        font-size: 23px;
+        font-size: 37px;
         line-height: 1.4;
         word-wrap: break-word;
       }
