hide scroll bar

--- a/simpledigital.html
+++ b/simpledigital.html
@@ -19,6 +19,7 @@
         align-items: end;
         background: transparent;
         font-family: monospace;
+        overflow: hidden;
       }
 
       /* LAYOUT */
