change glow simple digital

--- a/simpledigital.html
+++ b/simpledigital.html
@@ -8,7 +8,7 @@
       :root {
         --led-on: red;
         --led-off: #ffffff1f;
-        --glow: 0 0 12px red;
+        --glow: 0 0 30px white;
       }
 
       body {
@@ -147,6 +147,7 @@
         color: var(--led-on);
         text-shadow: var(--glow);
         text-wrap: nowrap;
+        font-weight: bolder;
       }
     </style>
   </head>
