--- a/imessage-dock.html
+++ b/imessage-dock.html
@@ -199,7 +199,7 @@
 
       /* ===== iMessage Header ===== */
       #header {
-        height: 88px;
+        height: 130px;
         background: #f5f5f7;
         border-bottom: 1px solid rgba(0, 0, 0, 0.08);
         position: relative;
@@ -212,6 +212,7 @@
         justify-content: space-between;
         height: 100%;
         padding: 0 16px;
+        padding-top: 8%;
       }
 
       /* Left & Right buttons */
@@ -309,6 +310,7 @@
         /* max-width: 350px; */
         background: #f5f5f7;
         z-index: 99;
+        height: 12%;
       }
 
       .imessage-footer {
