--- a/imessage-dock.html
+++ b/imessage-dock.html
@@ -212,7 +212,7 @@
         justify-content: space-between;
         height: 100%;
         padding: 0 16px;
-        padding-top: 8%;
+        padding-top: 32px;
       }
 
       /* Left & Right buttons */
