--- a/imessage-dock.html
+++ b/imessage-dock.html
@@ -40,7 +40,7 @@
         max-width: 350px;
         padding: 0 20px;
         box-sizing: border-box;
-        padding-bottom: 56px;
+        padding-bottom: 160px;
       }
 
       .msg.left {
@@ -211,7 +211,7 @@
         align-items: center;
         justify-content: space-between;
         height: 100%;
-        padding: 0 16px;
+        padding: 0 90px;
         padding-top: 32px;
       }
 
@@ -310,11 +310,11 @@
         /* max-width: 350px; */
         background: #f5f5f7;
         z-index: 99;
-        height: 12%;
+        height: 8%;
       }
 
       .imessage-footer {
-        padding: 8px 12px 12px;
+        padding: 20px 95px;
       }
 
       /* Input bar */
