--- a/imessage-dock.html
+++ b/imessage-dock.html
@@ -29,6 +29,7 @@
         background: transparent;
         overflow: hidden;
         font-family: "Arima-Regular", sans-serif;
+        background:white;
       }
 
       #chat {
