--- a/imessage-dock.html
+++ b/imessage-dock.html
@@ -116,7 +116,7 @@
         background-color: transparent;
         border-bottom-left-radius: 100%;
         border-bottom-right-radius: 100%;
-        box-shadow: 9px 9px 0px 4px #b5b5b5;
+        box-shadow: 9px 9px 0px 4px #dbdadd;
       }
 
       .msg.right::after {
@@ -191,7 +191,7 @@
         color: #333;
         /* box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.25); */
         padding: 7%;
-        background: #b5b5b5;
+        background: #dbdadd;
         border-radius: 20px;
         /* font-weight: 700; */
       }
@@ -238,7 +238,7 @@
       /* ===== iMessage Header ===== */
       #header {
         height: 100px;
-        background: #f5f5f7;
+        background: #dbdadd;
         border-bottom: 1px solid rgba(0, 0, 0, 0.08);
         position: relative;
         z-index: 99;
@@ -257,12 +257,12 @@
       .header-right {
         width: 44px;
         height: 44px;
-        background: #fff;
+        background: #dbdadd;
         border-radius: 50%;
         display: flex;
         align-items: center;
         justify-content: center;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+        /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15); */
       }
 
       /* icon itself */
