change font color

--- a/status.html
+++ b/status.html
@@ -166,7 +166,7 @@
 
       .username {
         /* font-weight: 500; */
-        font-size: 25px;
+        font-size: 40px;
         display: flex;
         align-items: center;
         gap: 8px;
@@ -176,7 +176,7 @@
         /* border: 1px solid #181818; */
         /* border-radius: 60px; */
         /* background: #fff; */
-        color: black !important;
+        color: white !important;
         /* padding: 2%; */
         /* position: absolute; */
         /* top: 2%; */
