--- a/status.html
+++ b/status.html
@@ -91,7 +91,7 @@
         /* margin: 0 2%; */
         display: flex;
         flex-direction: column-reverse;
-        align-items: stretch;
+        align-items: anchor-center;
         /* background: #353535; */
         position: absolute;
         left: 50%;
@@ -144,6 +144,7 @@
         overflow: hidden;
         padding: 28px;
         margin-top: -4%;
+        width: max-content;
       }
 
       .footer {
@@ -166,7 +167,7 @@
 
       .username {
         /* font-weight: 500; */
-        font-size: 40px;
+        font-size: 33px;
         display: flex;
         align-items: center;
         gap: 8px;
@@ -241,8 +242,8 @@
       }
 
       .text {
-        font-size: 40px;
-        line-height: 1.4;
+        font-size: 35px;
+        line-height: 1;
         word-wrap: break-word;
       }
 
