--- a/status.html
+++ b/status.html
@@ -144,7 +144,7 @@
         overflow: hidden;
         padding: 28px;
         margin-top: -4%;
-        width: max-content;
+        width: 160%;
       }
 
       .footer {
