--- a/status.html
+++ b/status.html
@@ -122,7 +122,7 @@
         /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
         /* margin:2%; */
         background: whitesmoke;
-        border: 7px solid #353535;
+        /* border: 7px solid #353535; */
         border-radius: 50%;
         /* z-index: 99; */
         /* position: absolute; */
@@ -144,7 +144,7 @@
         overflow: hidden;
         padding: 28px;
         margin-top: -4%;
-        width: 160%;
+        max-width: 160%;
       }
 
       .footer {
@@ -163,11 +163,12 @@
         padding: 2% 5%;
         /* margin-top: -1%; */
         justify-content: center;
+        width: max-content;
       }
 
       .username {
         /* font-weight: 500; */
-        font-size: 33px;
+        font-size: 40px;
         display: flex;
         align-items: center;
         gap: 8px;
