fix status and commit envelop

--- a/status.html
+++ b/status.html
@@ -246,6 +246,8 @@
         font-size: 35px;
         line-height: 1;
         word-wrap: break-word;
+        line-height: 45px;
+        margin-top: 20px;
       }
 
       .text img,
