change default color to red

--- a/envelop.html
+++ b/envelop.html
@@ -140,7 +140,7 @@
       .flap-left,
       .flap-right,
       .flap-bottom {
-        background: linear-gradient(0deg, #284c55, #3c616b);
+        background: linear-gradient(90deg, #b91d1f, #7d2224);
         z-index: 6;
       }
 
@@ -152,7 +152,7 @@
       }
       .flap-bottom {
         clip-path: polygon(0 100%, 0 65%, 50% 45%, 100% 65%, 100% 100%);
-        background: linear-gradient(48deg, #284c55, #30616f);
+        background: linear-gradient(90deg, #891516, #7d2224);
         z-index: 7;
       }
 
