--- a/flatwhite.html
+++ b/flatwhite.html
@@ -188,14 +188,14 @@
 
       .badge {
         height: auto;
-        width: 40px;
-        margin-left: 30px;
+        width: 28px;
+        /* margin-left: 30px; */
       }
 
       .style-glass .message {
         position: relative;
         overflow: hidden;
-        padding: 28px 50px;
+        padding: 28px;
       }
 
       .style-glass .username {
