change font weight

--- a/flatwhite.html
+++ b/flatwhite.html
@@ -107,8 +107,8 @@
         font-size: 35px;
         text-align: end;
         color: whitesmoke;
-        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-        font-weight: 600;
+        /* text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); */
+        font-weight: bolder;
         letter-spacing: 4px;
       }
 
