change simple digital from english to indonesia calendar naming

--- a/simpledigital.html
+++ b/simpledigital.html
@@ -234,7 +234,7 @@
       /* DATE */
       function updateDate() {
         const d = new Date();
-        const days = ["SUN", "MON", "TUE", "WED", "THU", "FRI", "SAT"];
+        const days = ["MIN", "SEN", "SEL", "RAB", "KAM", "JUM", "SAB"];
         document.getElementById("date").textContent = `${
           days[d.getDay()]
         } • ${d.getDate()}-${d.getMonth() + 1}-${d.getFullYear()}`;
